Table collapse fix

--- a/default_files/4005757.css
+++ b/default_files/4005757.css
@@ -12,6 +12,7 @@
 	width:50%;
 }
 
+.search table{border-collapse:separate;}
 
 .header{
 	padding-bottom:5px;
@@ -156,7 +157,7 @@ blockquote{margin:1.3846em 1em;}
 p,table,pre,fieldset,dl{margin: 0.6923em 0;}
 ol,ul{margin: 0.6923em 1em 0.6923em inherit}
 dl dd{margin-left:1em;}
-table{border-collapse:separate; margin:1.3846em 0;}
+table{border-collapse:collapse; margin:1.3846em 0;}
 thead{border-bottom:1px solid #eee;}
 tfoot{border-top:1px solid #eee;}
 th{text-align:center;background-color:#f0f0f0;}
